--- a/react-app/src/components/Questions/questions.css
+++ b/react-app/src/components/Questions/questions.css
@@ -3,4 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    border: solid 1px;
+    width: 500px;
+    margin: auto;
 }
