--- a/react-app/src/components/Home/index.css
+++ b/react-app/src/components/Home/index.css
@@ -1,18 +1,34 @@
 .biz-preview {
     border: solid red;
-    grid-gap: 1.5vw;
+    margin: auto;
+
     display: grid;
-    font-size: 14px;
-    gap: 1.5vw;
-    grid-template-columns: repeat(4, 2fr);
-    justify-content: space-between;
+    width: 1000px;
+    /* grid-template-columns: repeat(3, 3fr); */
+    grid-template-columns: repeat(3, 3fr);
+
+    /* grid-template-columns: repeat(4, 80px);
+    grid-template-rows: repeat(3,100px); */
+    /* column-gap: -rem; */
+
     margin-top: 35px;
 }
 
-.biz-preview-container {
-    margin-left: 35px;
-    margin-right: 45px;
-    height: 100vh;
+.biz-container {
+    border: solid purple;
+    margin: 5px;
+    width: 300px;
+    overflow: hidden;
+    box-shadow: 0px 0px 15px -5px;
+}
+
+.image-container img {
+    overflow: hidden;
+    height: 200px;
+}
+.biz-content {
+    margin: 1rem;
+    margin-top: 0.3rem;
 }
 
 .biz-img {
@@ -28,8 +44,17 @@
     height: 200px;
 }
 
+.biz-name {
+    margin-bottom: 0.5rem;
+}
+.btn {
+    display: flex;
+    justify-content: center;
+}
+
 .create_biz_button {
     position: relative;
-
     top: 100px;
+    display: flex;
+    justify-content: center;
 }
