add image slider and updates to biz cards

--- a/react-app/src/components/Home/index.css
+++ b/react-app/src/components/Home/index.css
@@ -1,34 +1,57 @@
 .biz-preview {
-    border: solid red;
+    /* border: solid red; */
     margin: auto;
 
     display: grid;
     width: 1000px;
-    /* grid-template-columns: repeat(3, 3fr); */
-    grid-template-columns: repeat(3, 3fr);
 
-    /* grid-template-columns: repeat(4, 80px);
-    grid-template-rows: repeat(3,100px); */
-    /* column-gap: -rem; */
+    grid-template-columns: repeat(3, 3fr);
 
     margin-top: 35px;
 }
 
 .biz-container {
-    border: solid purple;
+    /* border: solid purple; */
+    display: grid;
+    /* grid-template-rows: max-content 20px 1fr; */
     margin: 5px;
-    width: 300px;
+    width: 315px;
     overflow: hidden;
     box-shadow: 0px 0px 15px -5px;
 }
+.header-card {
+    /* border: solid red; */
+    border-bottom: 3px solid #bbb;
+}
 
 .image-container img {
+    /* border: solid blue; */
     overflow: hidden;
     height: 200px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+.image-container {
+    border-bottom: 3px solid #bbb;
+    /* border: solid green; */
 }
 .biz-content {
-    margin: 1rem;
+    margin: 0.5rem;
     margin-top: 0.3rem;
+    /* border: solid yellow; */
+}
+
+.reviews {
+    /* border: solid brown; */
+    display: flex;
+    gap: 10px;
+    padding-top: 5px;
+    /* justify-content: space-around; */
+}
+
+.biz-name {
+    /* border: solid black; */
 }
 
 .biz-img {
@@ -47,28 +70,41 @@
 .biz-name {
     margin-bottom: 0.5rem;
 }
-.btn {
-    display: flex;
-    justify-content: center;
+
+.actual-review {
+    /* background-color: blue; */
+    padding-bottom: 15px;
 }
 
-.create_biz_button {
-    position: relative;
-    top: 100px;
-    display: flex;
-    justify-content: center;
+.biz-review-info {
+    /* background-color: yellow; */
+    padding-top: 5px;
+    text-align: center;
 }
 
 .first-review {
-    padding-top: 40px;
+    padding-top: 20px;
+    padding-left: 5px;
+    padding: 5 px;
+}
+
+.no-review-container {
+    /* border: solid yellow; */
+    height: 10cm;
 }
 
 .biz-name-no-review {
     margin-bottom: 0.5rem;
-    padding-top: 20px;
+    padding-top: 25px;
+    padding-left: 5px;
 }
 
 .image-container-no-review img {
     overflow: hidden;
-    height: 220px;
+    height: 230px;
+}
+
+.header {
+    text-align: center;
+    padding-top: 50px;
 }
