conditonal render for add menu btn

--- a/react-app/src/components/NavBar/nav.css
+++ b/react-app/src/components/NavBar/nav.css
@@ -19,7 +19,7 @@
 }
 
 .nav-bar-container {
-    background-color: transparent;
+    background-color: red;
     height: 50px;
     display: flex;
     align-items: center;
