--- a/react-app/src/components/ViewBiz/index.css
+++ b/react-app/src/components/ViewBiz/index.css
@@ -11,9 +11,14 @@
 .biz-detail {
     display: flex;
     justify-content: center;
+    background-repeat: repeat-x;
 }
 
 button {
     justify-content: center;
     display: flex;
+}
+
+.biz-img {
+    background-repeat: repeat-x;
 }
