--- a/react-app/src/components/NavBar/nav.css
+++ b/react-app/src/components/NavBar/nav.css
@@ -22,6 +22,7 @@
     background-color: red;
     height: 50px;
     display: flex;
+    position: relative;
     align-items: center;
     justify-content: space-between;
 }
