--- a/react-app/src/components/Home/ImageSlider.css
+++ b/react-app/src/components/Home/ImageSlider.css
@@ -13,12 +13,13 @@
     position: absolute;
     top: 0;
     left: 0;
-
     width: 100%;
     height: 100%;
     opacity: 0;
     transform: translateX(-50%);
     transition: all 0.5s ease;
+    /* z-index: -1; */
+    /* margin-top: 200px; */
 }
 
 @media screen and (min-width: 600px) {
