--- a/react-app/src/components/Menu/menu.css
+++ b/react-app/src/components/Menu/menu.css
@@ -1,5 +1,5 @@
-.menu-container {
-    /* display: flex; */
+/* .qrm-container {
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -16,4 +16,4 @@ h3 {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-}
+} */
