--- a/react-app/src/components/NavBar/nav.css
+++ b/react-app/src/components/NavBar/nav.css
@@ -19,15 +19,9 @@
 }
 
 .nav-bar-container {
-<<<<<<< HEAD
-    background-color: red;
-    /* position: absolute !important; */
-    /* position: absolute; */
-    height: 55px;
-=======
-    background-color: #FF2E63;
+    background-color: #ff2e63;
+    z-index: 100;
     height: 50px;
->>>>>>> origin/AS_Login
     display: flex;
     position: relative;
     align-items: center;
