--- a/react-app/src/components/Questions/questions.css
+++ b/react-app/src/components/Questions/questions.css
@@ -1,7 +1,7 @@
-.questions-container {
+/* .qrm-container {
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: end;
     border: solid 1px;
     width: 500px;
     height: 200px;
@@ -15,4 +15,4 @@ h3 {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-}
+} */
