--- a/react-app/src/components/ViewBiz/index.css
+++ b/react-app/src/components/ViewBiz/index.css
@@ -27,3 +27,38 @@ button {
     justify-content: end;
     display: flex;
 }
+
+/* .qrm-container {
+    flex-direction: column;
+    align-items: center;
+    display: flex;
+    justify-content: space-around;
+    border: solid 1px;
+    width: 500px;
+    height: 200px;
+    margin: auto;
+    overflow-y: scroll;
+} */
+
+.qrm-container {
+    display: flex;
+    justify-content: space-around;
+}
+
+.r-container {
+    border: solid 1px;
+    width: 500px;
+    height: 200px;
+}
+
+.m-container {
+    border: solid 1px;
+    width: 500px;
+    height: 200px;
+}
+
+.q-container {
+    border: solid 1px;
+    width: 500px;
+    height: 200px;
+}
