--- a/react-app/src/components/Home/ImageSlider.css
+++ b/react-app/src/components/Home/ImageSlider.css
@@ -18,8 +18,8 @@
     opacity: 0;
     transform: translateX(-50%);
     transition: all 0.5s ease;
-    z-index: -1;
-    /* margin-top: 200px; */
+    /* z-index: -1; */
+    /* margin-top: 120px; */
 }
 
 @media screen and (min-width: 600px) {
