--- a/react-app/src/components/Menu/menu.css
+++ b/react-app/src/components/Menu/menu.css
@@ -23,3 +23,17 @@ h3 {
     align-items: center;
     justify-content: center;
 }
+
+.add-menu-item-container {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.menu-form {
+    max-width: 500px;
+    margin: 2rem auto !important;
+    border: 1px solid;
+    padding: 2rem;
+    justify-content: center;
+}
