--- a/react-app/src/components/Home/ImageSlider.css
+++ b/react-app/src/components/Home/ImageSlider.css
@@ -19,6 +19,7 @@
     opacity: 0;
     transform: translateX(-50%);
     transition: all 0.5s ease;
+    z-index: -1;
 }
 
 @media screen and (min-width: 600px) {
