--- a/react-app/src/components/Menu/menu.css
+++ b/react-app/src/components/Menu/menu.css
@@ -23,17 +23,42 @@ h3 {
     align-items: center;
     justify-content: center;
 }
-
-.add-menu-item-container {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+.qrm-container > .m-container > h4 {
+    padding-bottom: 10%;
+    border-bottom: solid 1x;
 }
+.qrm-container > .m-container > .menu-container {
+    border: 1px solid;
+    width: 100%;
+    border-bottom: none;
+    border-left: none;
+    border-right: none;
+    border-top: 80%;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
+    /* justify-content: space-between; */
+}
+/* .add-menu-item-container {
+    margin: 0 auto;
+    display: block;
+    width: 100%;
+    max-width: 1200px;
+    padding-top: 25px;
+} */
 
+.menu-container {
+    border-top: solid 1x;
+}
 .menu-form {
     max-width: 500px;
     margin: 2rem auto !important;
     border: 1px solid;
     padding: 2rem;
     justify-content: center;
+}
+
+.item-border {
+    padding-bottom: 10px;
 }
