--- a/react-app/src/components/Questions/questions.css
+++ b/react-app/src/components/Questions/questions.css
@@ -33,3 +33,16 @@ form {
     margin-left: auto;
     margin-right: auto;
 }
+
+h3 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.question-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
