--- a/react-app/src/components/Home/index.css
+++ b/react-app/src/components/Home/index.css
@@ -1,57 +1,53 @@
 .biz-preview {
-    /* border: solid red; */
     margin: auto;
 
     display: grid;
     width: 1000px;
 
     grid-template-columns: repeat(3, 3fr);
-
-    /* margin-top: 35px; */
 }
 
 .biz-container {
-    /* border: solid purple; */
+    border: solid purple;
     display: grid;
-    /* grid-template-rows: max-content 20px 1fr; */
+
     margin: 5px;
-    width: 315px;
+    width: 290px;
     overflow: hidden;
     box-shadow: 0px 0px 15px -5px;
+    height: 30em;
 }
 .header-card {
-    /* border: solid red; */
     border-bottom: 3px solid #bbb;
+    height: 3em;
 }
 
 .image-container img {
-    /* border: solid blue; */
     overflow: hidden;
-    height: 200px;
+    height: 12.3em;
+    width: 100%;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
+    border-bottom: 3px solid #bbb;
 }
 .image-container {
     border-bottom: 3px solid #bbb;
-    /* border: solid green; */
+    border: solid green;
+
+    height: 12.5em;
 }
 .biz-content {
     margin: 0.5rem;
     margin-top: 0.3rem;
-    /* border: solid yellow; */
+
+    padding: 5px;
+    height: 15em;
+    width: 95%;
 }
 
 .reviews {
-    /* border: solid brown; */
     display: flex;
     gap: 10px;
     padding-top: 5px;
-    /* justify-content: space-around; */
-}
-
-.biz-name {
-    /* border: solid black; */
 }
 
 .biz-img {
@@ -71,41 +67,55 @@
     margin-bottom: 0.5rem;
 }
 
-.actual-review {
-    /* background-color: blue; */
-    padding-bottom: 15px;
-}
-
 .biz-review-info {
-    /* background-color: yellow; */
+    border-top: 3px solid #bbb;
     padding-top: 5px;
     text-align: center;
+}
+.actual-review {
+    box-sizing: content-box;
+    width: 100%;
+    height: 3.5em;
+    overflow: scroll;
 }
 
 .first-review {
     padding-top: 20px;
     padding-left: 5px;
     padding: 5 px;
+    /* border: solid blue; */
 }
 
 .no-review-container {
-    /* border: solid yellow; */
-    height: 10cm;
+    /* height: 10cm; */
     overflow: hidden;
+    /* border: solid red; */
 }
 
 .biz-name-no-review {
     margin-bottom: 0.5rem;
     padding-top: 25px;
     padding-left: 5px;
+    /* border: solid green; */
 }
 
 .image-container-no-review img {
     overflow: hidden;
     height: 230px;
+    /* border: yellow; */
 }
 
 .header {
     text-align: center;
     padding-top: 50px;
+    /* border: solid green; */
+}
+
+.image-review img {
+    overflow: hidden;
+    margin-top: 5px;
+    height: 9.3em;
+    width: 100%;
+    display: block;
+    border-bottom: 3px solid #bbb;
 }
