--- a/react-app/src/components/Home/index.css
+++ b/react-app/src/components/Home/index.css
@@ -8,7 +8,7 @@
 }
 
 .biz-container {
-    border: solid purple;
+    /* border: solid purple; */
     display: grid;
 
     margin: 5px;
@@ -31,7 +31,7 @@
 }
 .image-container {
     border-bottom: 3px solid #bbb;
-    border: solid green;
+    /* border: solid green; */
 
     height: 12.5em;
 }
@@ -96,12 +96,14 @@
     margin-bottom: 0.5rem;
     padding-top: 25px;
     padding-left: 5px;
+    border-bottom: 3px solid #bbb;
     /* border: solid green; */
 }
 
 .image-container-no-review img {
     overflow: hidden;
     height: 230px;
+    border-bottom: 3px solid #bbb;
     /* border: yellow; */
 }
 
