--- a/react-app/src/components/Home/index.css
+++ b/react-app/src/components/Home/index.css
@@ -1,3 +1,8 @@
+.header {
+    text-align: center;
+    padding-top: 50px;
+    /* border: solid green; */
+}
 .biz-preview {
     margin: auto;
 
@@ -15,7 +20,7 @@
     width: 290px;
     overflow: hidden;
     box-shadow: 0px 0px 15px -5px;
-    height: 30em;
+    height: 25em;
 }
 .header-card {
     border-bottom: 3px solid #bbb;
@@ -71,6 +76,7 @@
     border-top: 3px solid #bbb;
     padding-top: 5px;
     text-align: center;
+    /* border: purple; */
 }
 .actual-review {
     box-sizing: content-box;
@@ -94,7 +100,7 @@
 
 .biz-name-no-review {
     margin-bottom: 0.5rem;
-    padding-top: 25px;
+    padding-top: 10px;
     padding-left: 5px;
     border-bottom: 3px solid #bbb;
     /* border: solid green; */
@@ -102,22 +108,16 @@
 
 .image-container-no-review img {
     overflow: hidden;
-    height: 230px;
+    height: 270px;
     border-bottom: 3px solid #bbb;
     /* border: yellow; */
 }
 
-.header {
-    text-align: center;
-    padding-top: 50px;
-    /* border: solid green; */
-}
-
-.image-review img {
+/* .image-review img {
     overflow: hidden;
     margin-top: 5px;
-    height: 9.3em;
+    height: 4.3em;
     width: 100%;
     display: block;
     border-bottom: 3px solid #bbb;
-}
+} */
