--- a/react-app/src/components/ReviewForm/CreateReview.css
+++ b/react-app/src/components/ReviewForm/CreateReview.css
@@ -1,5 +1,4 @@
 .make-new-review {
-    background-color: tomato;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
@@ -13,6 +12,55 @@
     text-align: center;
 }
 
-.review-element>h3 {
-    color: violet;
+.review-title {
+    font-family: 'Roboto', sans-serif;
+    margin: 50px;
+    font-style: bold;
+}
+
+.review-text {
+    font-family: 'Roboto', sans-serif;
+    margin: 25px;
+    align-self: center;
+    font-style: bold;
+}
+
+.review-button {
+    margin: 20px;
+    background-color: #FF2E63;
+    border-radius: 8px;
+    border-style: none;
+    box-sizing: border-box;
+    color: #FFFFFF;
+    cursor: pointer;
+    display: inline-block;
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+    height: 50px;
+    line-height: 20px;
+    list-style: none;
+    outline: none;
+    padding: 10px;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    transition: color 100ms;
+    vertical-align: baseline;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    width: 80px;
+    align-self: center;
+}
+
+
+.review-body {
+    width: 25%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
 }
