--- a/react-app/src/components/Form/CreateBizForm/index.css
+++ b/react-app/src/components/Form/CreateBizForm/index.css
@@ -47,7 +47,7 @@ form .biz-details .input-box {
 }
 
 .biz-details .input-box input:focus {
-    border-color: RED;
+    border-color: #FF2E63;
 }
 
 .button {
@@ -55,7 +55,7 @@ form .biz-details .input-box {
     height: 45px;
     font-size: 20px;
     color: white;
-    background-color: red;
+    background-color: #FF2E63;
     border: none;
     font-weight: 500;
     letter-spacing: 1px;
