--- a/react-app/src/components/ReviewForm/index.css
+++ b/react-app/src/components/ReviewForm/index.css
@@ -10,20 +10,23 @@ a {
     /* padding-left: 140px; */
     /* display: flex; */
     /* justify-content: space-between; */
+    font-size: 35px;
+    display: flex;
     align-items: center;
-
+    padding-top: 20px;
     text-align: center;
-    width: 25%;
+    width: 40%;
+    /* border: solid red; */
 }
 
 .review-div {
-    margin-left: 380px;
+    margin-left: 480px;
     width: 30%;
     overflow: hidden;
     /* border: 3px solid green; */
     /* padding: 10px; */
 }
-.testimonials {
+.reviews {
     display: flex;
 
     /* justify-content: center; */
@@ -35,7 +38,7 @@ a {
     /* background-color: pink; */
     height: auto;
 }
-.testimonial-box-container {
+.reviews-box-container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -44,7 +47,7 @@ a {
     width: 100%;
 }
 
-.testimonial-box {
+.review-box {
     background-color: #ffffff;
     width: 600px;
     box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.6);
