center review section

--- a/react-app/src/components/ReviewForm/index.css
+++ b/react-app/src/components/ReviewForm/index.css
@@ -10,12 +10,14 @@ a {
     /* padding-left: 140px; */
     /* display: flex; */
     /* justify-content: space-between; */
-    font-size: 35px;
+    font-size: 30px;
     display: flex;
     align-items: center;
     padding-top: 20px;
     text-align: center;
     width: 40%;
+    /* border: solid red; */
+    margin-left: 600px;
     /* border: solid red; */
 }
 
@@ -23,6 +25,7 @@ a {
     margin-left: 480px;
     width: 30%;
     overflow: hidden;
+
     /* border: 3px solid green; */
     /* padding: 10px; */
 }
@@ -32,8 +35,8 @@ a {
     /* justify-content: center; */
     /* align-items: left;
     flex-direction: column; */
-
-    margin-left: 15px;
+    margin-left: 650px;
+    /* margin-left: 15px; */
     width: 25%;
     /* background-color: pink; */
     height: auto;
