--- a/react-app/src/components/auth/LoginForm.css
+++ b/react-app/src/components/auth/LoginForm.css
@@ -63,4 +63,8 @@ select {
     box-sizing: border-box;
 }
 
-/* .user-form {} */
+/* .user-form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+} */
