Made CSS and added a branch WITH Delete cascade all gone for testing.

--- a/react-app/src/components/ReviewForm/CreateReview.css
+++ b/react-app/src/components/ReviewForm/CreateReview.css
@@ -1,11 +1,10 @@
-.edit-review {
+.new-review {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: tomato;
 }
 
-.update-review {
+.make-new-review {
     display: flex;
     flex-direction: column;
     width: 80%;
