--- a/react-app/src/components/ReviewForm/index.css
+++ b/react-app/src/components/ReviewForm/index.css
@@ -3,15 +3,19 @@
     padding: 0px;
     box-sizing: border-box;
 }
+
 a {
     text-decoration: none;
 }
+
 .header-review {
     /* padding-left: 140px; */
     /* display: flex; */
     /* justify-content: space-between; */
+    font-family: "Roboto", sans-serif;
     font-size: 30px;
     display: flex;
+    flex-direction: column;
     align-items: center;
     padding-top: 20px;
     text-align: center;
@@ -29,6 +33,7 @@ a {
     /* border: 3px solid green; */
     /* padding: 10px; */
 }
+
 .reviews {
     display: flex;
 
@@ -41,12 +46,14 @@ a {
     /* background-color: pink; */
     height: auto;
 }
+
 .reviews-box-container {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
     /* background-color: black; */
+    margin: 50px;
     width: 100%;
 }
 
@@ -55,22 +62,24 @@ a {
     width: 600px;
     box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.6);
     padding: 5px;
-    margin: 5px;
+    margin: 10px;
 }
 
 .profile {
     display: flex;
     align-items: center;
+    margin: 15px;
 }
 
 .name-user {
     align-items: center;
     flex-direction: column;
+    font-family: "Roboto", sans-serif;
 }
 
 .name-user strong {
     color: #3d3d3d;
-    font-size: 1rem;
+    font-size: 1.1rem;
     letter-spacing: 0.5px;
 }
 
@@ -81,9 +90,45 @@ a {
     margin-bottom: 20px;
 }
 
+.review-ratings {
+    margin: 25px;
+}
+
 .comment-section {
     display: flex;
     justify-content: space-between;
     /* background-color: purple; */
     width: 90%;
+}
+
+.client-comment {
+    font-family: "Roboto", sans-serif;
+    margin: 25px;
+}
+
+.update-review {
+    margin: 20px;
+    background-color: #ff2e63;
+    border-radius: 8px;
+    border-style: none;
+    box-sizing: border-box;
+    color: #ffffff;
+    cursor: pointer;
+    font-family: "Roboto", sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+    height: 50px;
+    line-height: 20px;
+    list-style: none;
+    outline: none;
+    padding: 10px;
+    text-align: center;
+    text-decoration: none;
+    transition: color 100ms;
+    vertical-align: baseline;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    width: 30px;
+    align-self: center;
 }
