--- a/react-app/src/components/auth/SignUpForm.css
+++ b/react-app/src/components/auth/SignUpForm.css
@@ -13,7 +13,7 @@
     margin: 50px;
 } */
 
-.login-btn {
+.sign-up-btn {
     margin: 20px;
     background-color: #ff2e63;
     border-radius: 8px;
