--- a/react-app/src/components/ReviewForm/index.css
+++ b/react-app/src/components/ReviewForm/index.css
@@ -13,15 +13,16 @@ a {
     /* display: flex; */
     /* justify-content: space-between; */
     font-family: "Roboto", sans-serif;
-    font-size: 30px;
+    font-size: 24px;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding-top: 20px;
     text-align: center;
-    width: 40%;
+    justify-content: center;
+    /* width: 40%; */
     /* border: solid red; */
-    margin-left: 600px;
+    /* margin-left: 600px; */
     /* border: solid red; */
 }
 
@@ -37,7 +38,7 @@ a {
 .reviews {
     display: flex;
 
-    /* justify-content: center; */
+    justify-content: center;
     /* align-items: left;
     flex-direction: column; */
     margin-left: 650px;
@@ -52,6 +53,8 @@ a {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    align-items: center;
+    flex-direction: column;
     /* background-color: black; */
     margin: 50px;
     width: 100%;
