css for buttons

--- a/react-app/src/components/Menu/menu.css
+++ b/react-app/src/components/Menu/menu.css
@@ -67,3 +67,30 @@ h3 {
 .item-border {
     padding-bottom: 10px;
 }
+
+.add-menu {
+    margin-left: 15px;
+    background-color: #ff2e63;
+    border-radius: 8px;
+    border-style: none;
+    box-sizing: border-box;
+    color: #ffffff;
+    cursor: pointer;
+    display: inline-block;
+    font-family: "Roboto", sans-serif;
+    font-size: 14px;
+    font-weight: 200;
+    /* height: 40px; */
+    /* line-height: 20px; */
+    list-style: none;
+    outline: none;
+    padding: 10px;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    transition: color 100ms;
+    vertical-align: baseline;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+}
